refactor:피드백 반영 및 테스트 추가